<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version_info">Boilermaker Toolbox v#VERSION
		\nUpdated: 05/18/16
		\nWages updated: 05/18/16</string>

    <!-- Main Menu -->
    <string name="action_settings">Settings</string>
    <string name="app_name">Boilermaker Toolbox</string>
    <string name="app_name_short">Toolbox</string>
    <string name="default_spinner_value">-</string>
    <!-- Hall Links -->


    <!-- Pay Calculator most stats are vestigial -->
    <string name="week_header">Work-week</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="fourtens_but">Four-Tens</string>
    <string name="nights_but">Nightshift</string>
    <string name="travel_but">Weekly Travel</string>
    <string name="travelday_but">Daily Travel</string>
    <string name="clr_but">Clear</string>
    <string name="tens_but">Set 10s</string>
    <string name="twelves_but">Set 12s</string>
    <string name="meal_text">Meals</string>
    <string name="loa_text">L.O.A</string>
    <string name="holBut">Holidays:</string>

    <!-- About Page -->
    <string name="about_blurb">Boilermaker Toolbox is a free reference tool geared towards Union industry in Alberta.
	    This tool is not directly affiliated with any associations and shouldn\'t be relied on for anything official.
	    \nFeel free to mail <a href="mailto:bmtoolkit@gmail.com">bmtoolbox@gmail.com</a> with any comments or suggestions.
        \n\nCheck out <a href="https://itunes.apple.com/ca/app/boilermac-toolbox/id1066490351">BoilerMac Toolbox</a> on the iTunes store if you have an iPhone or iPad.</string>
    <string name="about_header">About Boilermaker Toolbox</string>
    <string name="but_call146">View 146 Callout</string>

    <!-- Torque Pattern Gen -->
    <string name="torque_header">Torque Pattern Generator</string>
    <string name="torque_but">OK</string>
    <string name="torqueInstruction">Enter the stud count and hit OK.</string>
    <string name="errInt">Error: Stud Count must be higher then 8 and lower than 1000.</string>
    <string name="errEven">Error: Stud Count must divisible by 4.</string>
    <string name="studCount">Stud Count</string>

    <!-- Callouts -->
    <string-array name="locals">

        <!-- Display, Homepage URL, Callout URL, Phone office, Phone callout -->
        <item>73 - Atlantic,http://www.boilermaker73.ca,(506)634-7386</item>
        <item>128 - Ontario,http://128.boilermaker.ca,(905)332-0128</item>
        <item>146 - Edmonton,http://boilermakers.ca,call_http://boilermakers.ca/content/callout.html,(780)451-5992,call_(780)414-6860</item>
        <item>191 - Victoria,http://www.boilermaker.ca/191.htm,(250)383-4196 </item>
        <item>203 - Newfoundland,http://www.boilermaker.ca/203.htm,(709)229-7355</item>
        <item>271 - Montréal,http://www.boilermaker.ca/271.htm,(514)327-6135</item>
        <item>359 - B.C,http://www.boilermakers359.org,call_http://www.boilermakers359.org/dispatch.mp3,(778)369-3590</item>
        <item>451 - Flin Flon,http://www.boilermaker.ca/451.htm,(204)687-5168</item>
        <item>532 - Regina,http://www.boilermaker.ca/532.htm,(306)545-7581</item>
        <item>555 - Prairies,http://www.boilermakerslocal555.org,(204)987-9200,call_(204)987-9205</item>
        <item>600 - Saskatoon,http://www.boilermaker.ca/600.htm,(306)652-5008</item>
        <item>International,http://www.boilermakers.org,(913)371-2640</item>
        <item>IBB Canada,http://www.boilermaker.ca/home.htm</item>
        <item>BCA Agreements,http://www.bcacanada.ca/bca-negotiated-agreements</item>

    </string-array>

    <!-- CPI Estimator -->
    <string name="cpi_send">Go</string>
    <string name="cpi_header">Choose AB Consumer Price Index Rate and price of West Texas Crude for previous year.</string>

    <!-- Flange Reference -->
    <string name="flange_header">ASME Flange Reference</string>
    <string name="sDiam_text">Stud Diameter</string>
    <string name="wrench_text">Wrench Size</string>
    <string name="drift_text">Drift Pin</string>
    <string name="sCount_text">Stud Count</string>
    <string name="sLength_text">Stud Length</string>
    <string name="b7_text">B7 Torque</string>
    <string name="b7m_text">B7M Torque</string>

    <!-- Navigation Drawer-->
    <string name="navigation_drawer_open">Open Navigation Menu</string>
    <string name="navigation_drawer_close">Close Navigation Menu</string>
    <string name="action_about">About</string>

    <!-- Reporter Frag  -->
    <string name="reporter_intro">Apprentice reports can completed by the (also free) BMToolbox Reporter App.</string>
    <string name="reporter_launch_super">Apprentice Report\nas Supervisor</string>
    <string name="reporter_launch_apprentice">Apprentice Report\nas Apprentice</string>
    <string name="reporter_launch_steward">Apprentice Report\n as Job Steward</string>
    <string name="reporter_not_found">Boilermaker Reporter isn\'t installed.</string>
    <string name="reporter_download">Download from Play Store</string>
    <string name="reporter_footer">The report generation wasn\'t included in stock Boilermaker Toolbox
        because of added file size and permissions for writing to storage.</string>

    <!-- TaxGrossFrag -->
    <string name="tax_header_text">Estimate Income Tax by Province</string>
    <string name="tax_year_text">Tax Year:</string>
    <string name="tax_provincial_text">Provincial Rate:</string>
    <string name="tax_gross_text">Week\'s Gross:</string>
    <string name="tax_fedTotal_text">Federal Tax:</string>
    <string name="tax_provTotal_text">Provincial Tax:</string>
    <string name="tax_cpp_ei">CPP and EI:</string>
    <string name="tax_total_ded">Total Deductions:</string>
    <string name="tax_netIncome_text">Net Income:</string>
    <string name="tax_submit_button">Submit</string>

    <!-- Keys for Preferences -->
    <string name="pref_taxYear">list_taxYearNew</string>
    <string name="pref_prov">list_provWageNew</string>
    <string name="pref_custom_wage">custom_wage</string>
    <string name="pref_customMeal">custom_mealrate</string>
    <string name="pref_taxableMeals">taxable_meals</string>
    <string name="pref_loaRate">custom_loa</string>
    <string name="pref_vacOn">custom_vac_check</string>
    <string name="pref_vacRate">custom_vac_rate</string>
    <string name="pref_weekTravelRate">custom_weektravel</string>
    <string name="pref_weekTravelTax">taxable_weektravel</string>
    <string name="pref_dayTravelRate">custom_daytravel</string>
    <string name="pref_dayTravelTax">taxable_daytravel</string>
    <string name="pref_fieldDuesRate">custom_working_dues</string>
    <string name="pref_monthDuesRate">custom_monthly_dues</string>
    <string name="pref_addTax">custom_addtax</string>
    <string name="pref_custDaysOn">custDayCheck</string>
    <string name="pref_dayA_straight">custom_a_straight</string>
    <string name="pref_dayA_OT">custom_a_overtime</string>
    <string name="pref_dayA_double">custom_a_double</string>
    <string name="pref_dayB_straight">custom_b_straight</string>
    <string name="pref_dayB_OT">custom_b_overtime</string>
    <string name="pref_dayB_double">custom_b_double</string>
    <string name="pref_dayC_straight">custom_c_straight</string>
    <string name="pref_dayC_OT">custom_c_overtime</string>
    <string name="pref_dayC_Double">custom_c_double</string>
    <string name="pref_fieldDuesOn">custom_field_dues_on</string>
    <string name="pref_monthDuesOn">custom_month_dues_on</string>
    <string name="pref_nightPremOn">custom_night_prem_on</string>
    <string name="pref_nightPrem">custom_night_prem</string>
    <string name="pref_weekSpinners">payCalc_weekSpinners</string>
    <string name="pref_saveChecks">payCalc_saveChecks</string>
    <string name="pref_loaSelectedIndex">loaCountIndex</string>
    <string name="pref_mealSelectedIndex">mealCountIndex</string>
    <string name="pref_lastWageName">lastWageName</string>
    <string name="counter_time_picker_key">counter_time_preference</string>
    <string name="pref_counter_straight">pref_counter_straight</string>
    <string name="pref_counter_ot">pref_counter_ot</string>
    <string name="counter_shift_picker_key">counter_shift_picker</string>
    <string name="counter_weekend_key">counter_weekend_double</string>
    <string name="counter_holiday_key">counter_holiday</string>
    <string name="counter_fourtens_key">counter_fourtens</string>
    <string name="counter_night_key">counter_nightshift</string>
    <string name="counter_wage_key">counter_wage_rate</string>
    <string name="counter_scene_key">counter_active_scene</string>
    <string name="pref_dayA_picker">paycalc_day_a_shift</string>
    <string name="pref_dayB_picker">paycalc_day_b_shift</string>
    <string name="pref_dayC_picker">paycalc_day_c_shift</string>

    <string-array name="dummy_day_entries">
        <item>0</item>
        <item>10</item>
        <item>12</item>
    </string-array>


</resources>
