<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Regional Settings"
        android:key="category_regional">
		<ListPreference
			android:key="@string/pref_prov"
            android:title="Provincial Rates"
            android:summary="Change the wages, vacation rate and taxes by province."/>
		<ListPreference
			android:key="@string/pref_taxYear"
            android:title="Tax Year"
            android:summary="Change the tax year."/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Custom Rates"
		android:key="category_rates">
		<EditTextPreference
			android:key="@string/pref_custom_wage"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Custom Wage"
			android:summary="Set the rate of the custom wage."
			android:dialogTitle="Custom Wage"
			android:dialogMessage="Enter a custom wage."
			android:selectAllOnFocus="true"
			android:defaultValue="20" />
		<EditTextPreference
			android:key="@string/pref_customMeal"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Meal Bonus Rate"
			android:summary="Change the Meal Bonus rate."
			android:dialogTitle="Meal Bonus Rate"
			android:dialogMessage="Set the Meal Bonus Rate."
			android:selectAllOnFocus="true"
			android:defaultValue="40" />
		<CheckBoxPreference
			android:key="@string/pref_taxableMeals"
			android:title="Meal Bonus Taxable"
			android:summary="Set if Meal Bonus is taxable."
			android:defaultValue="true" />
		<EditTextPreference
			android:key="@string/pref_loaRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="LOA Rate"
			android:summary="Change the daily LOA (Living Out Allowance)."
			android:dialogTitle="LOA Rate"
			android:dialogMessage="Set the daily LOA rate."
			android:selectAllOnFocus="true"
			android:defaultValue="195" />
		<CheckBoxPreference
			android:key="@string/pref_vacOn"
			android:title="Custom Vacation Rate"
			android:summary="Defaults to provincial rate when unchecked."
			android:defaultValue="false" />
		<EditTextPreference
			android:key="@string/pref_vacRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:dependency="custom_vac_check"
			android:title="Vacation Rate"
			android:summary="Set a custom Vacation Rate."
			android:dialogTitle="Custom Vacation Rate"
			android:dialogMessage="Entering &quot;5.6&quot; counts as 5.6%."
			android:selectAllOnFocus="true"
			android:defaultValue="10.5" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Pay Calculator Travel Rates"
		android:key="settings_travel_category">
		<EditTextPreference
			android:key="@string/pref_weekTravelRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Weekly Travel Rate"
			android:summary="Change the weekly travel rate."
			android:dialogTitle="Weekly Travel Rate"
			android:dialogMessage="Set the Weekly Travel Rate."
			android:selectAllOnFocus="true"
			android:defaultValue="216" />
		<CheckBoxPreference
			android:key="@string/pref_weekTravelTax"
			android:title="Weekly Travel Taxable"
			android:summary="Check if Weekly travel is Taxable"
			android:defaultValue="false" />
		<EditTextPreference
			android:key="@string/pref_dayTravelRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Daily Travel Rate"
			android:summary="Change the daily travel rate."
			android:dialogTitle="Daily Travel Rate"
			android:dialogMessage="Set the Daily Travel Rate"
			android:selectAllOnFocus="true"
			android:defaultValue="20" />
		<CheckBoxPreference
			android:key="@string/pref_dayTravelTax"
			android:title="Daily Travel Taxable"
			android:summary="Check if Daily travel is Taxable"
			android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Pay Calculator Deduction Rates"
		android:key="category_travel">
		<CheckBoxPreference
			android:key="@string/pref_fieldDuesOn"
			android:title="Custom Field Dues"
			android:summary="Defaults to provincial rate when unchecked."
			android:defaultValue="false" />
		<EditTextPreference
			android:key="@string/pref_fieldDuesRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:dependency="@string/pref_fieldDuesOn"
			android:title="Field Dues Rate"
			android:summary="Change the hourly field dues rate."
			android:dialogTitle="Field Dues Hourly Rate"
			android:dialogMessage="Set the field dues percent (ex 3.75)."
			android:selectAllOnFocus="true"
			android:defaultValue="3.75" />
		<CheckBoxPreference
			android:key="@string/pref_monthDuesOn"
			android:title="Custom Monthly Dues"
			android:summary="Defaults to provincial rate when unchecked."
			android:defaultValue="false" />
		<EditTextPreference
			android:key="@string/pref_monthDuesRate"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Monthly Dues Rate"
			android:dependency="@string/pref_monthDuesOn"
			android:summary="Change the custom monthly dues rate."
			android:dialogTitle="Custom Monthly Dues Rate"
			android:dialogMessage="Set the Monthly dues rate."
			android:selectAllOnFocus="true"
			android:defaultValue="39.30" />
		<CheckBoxPreference
			android:key="@string/pref_nightPremOn"
			android:title="Custom Night Shift On"
			android:summary="Defaults to provincial rate when unchecked."
			android:defaultValue="false" />
		<EditTextPreference
			android:key="@string/pref_nightPrem"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Night Shift Rate"
			android:dependency="@string/pref_nightPremOn"
			android:summary="Change the custom night shift hourly rate."
			android:dialogTitle="Custom Night Shift Rate"
			android:dialogMessage="Set the custom night shift hourly rate."
			android:selectAllOnFocus="true"
			android:defaultValue="3" />
		<EditTextPreference
			android:key="@string/pref_addTax"
			android:ems="10"
			android:inputType="numberDecimal"
			android:title="Additional Income Tax"
			android:summary="Set amount of extra income tax to come off each cheque."
			android:dialogTitle="Additional Income Tax"
			android:dialogMessage="Enter additional tax to deduct each week"
			android:selectAllOnFocus="true"
			android:defaultValue="0" />
	</PreferenceCategory>
    <PreferenceCategory
        android:title="Custom Days"
        android:key="pref_custom_day_cat">

        <CheckBoxPreference
            android:key="@string/pref_custDaysOn"
            android:title="Use Custom Days"
            android:summary="Add custom daily hours for use in the pay calculator."
            android:defaultValue="false" />
        <com.atasoft.utilities.ShiftPickerPreference
            android:key="@string/pref_dayA_picker"
            android:dependency="@string/pref_custDaysOn"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Set"
            android:title="Custom Day A Shift"
            android:persistent="true"
            android:defaultValue="8,2,0" />
        <com.atasoft.utilities.ShiftPickerPreference
            android:key="@string/pref_dayB_picker"
            android:dependency="@string/pref_custDaysOn"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Set"
            android:title="Custom Day B Shift"
            android:persistent="true"
            android:defaultValue="8,2,2" />
        <com.atasoft.utilities.ShiftPickerPreference
            android:key="@string/pref_dayC_picker"
            android:dependency="@string/pref_custDaysOn"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Set"
            android:title="Custom Day C Shift"
            android:persistent="true"
            android:defaultValue="10,0,0" />
    </PreferenceCategory>
</PreferenceScreen>
