<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
    <CheckBoxPreference
        android:key="@string/pref_custDaysOn"
        android:title="Use Custom Days"
        android:summary="Add custom daily hours for use in the pay calculator."
        android:defaultValue="false" />

        <!--=============================Day A======================================-->
    <PreferenceCategory
        android:title="Custom Day A"
        android:key="category_customday_a" >
		<EditTextPreference
            android:key="@string/pref_dayA_straight"
			android:dependency="custom_daycheck"
			android:ems="10"
			android:inputType="numberDecimal"
            android:title="Day A Straight Time"
            android:summary="Sets straight time for Custom Day A."
            android:dialogTitle="Straight Time Day A"
            android:dialogMessage="Enter Straight Time Hours:"
			android:selectAllOnFocus="true"
            android:defaultValue="8" />
        <EditTextPreference
            android:key="@string/pref_dayA_OT"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day A Overtime"
            android:summary="Sets overtime for Custom Day A."
            android:dialogTitle="Overtime Day A"
            android:dialogMessage="Enter Overtime Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
        <EditTextPreference
            android:key="@string/pref_dayA_double"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day A Double Time"
            android:summary="Sets double time for Custom Day A."
            android:dialogTitle="Double Time Day A"
            android:dialogMessage="Enter Double Time Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Custom Day B"
        android:key="category_customday_b" >
        <!--=============================Day B======================================-->
        <EditTextPreference
            android:key="@string/pref_dayB_straight"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day B Straight Time"
            android:summary="Sets straight time for Custom Day B."
            android:dialogTitle="Straight Time Day B"
            android:dialogMessage="Enter Straight Time Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="8" />
        <EditTextPreference
            android:key="@string/pref_dayB_OT"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day B Overtime"
            android:summary="Sets overtime for Custom Day B."
            android:dialogTitle="Overtime Day B"
            android:dialogMessage="Enter Overtime Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
        <EditTextPreference
            android:key="@string/pref_dayB_double"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day B Double Time"
            android:summary="Sets double time for Custom Day B."
            android:dialogTitle="Double Time Day B"
            android:dialogMessage="Enter Double Time Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
        </PreferenceCategory>
    
    <PreferenceCategory
        android:title="Custom Day C"
        android:key="category_customday_c" >
        <!--=============================Day C======================================-->
        <EditTextPreference
            android:key="@string/pref_dayC_straight"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day C Straight Time"
            android:summary="Sets straight time for Custom Day C."
            android:dialogTitle="Straight Time Day C"
            android:dialogMessage="Enter Straight Time Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="8" />
        <EditTextPreference
            android:key="@string/pref_dayC_OT"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day C Overtime"
            android:summary="Sets overtime for Custom Day C."
            android:dialogTitle="Overtime Day C"
            android:dialogMessage="Enter Overtime Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
        <EditTextPreference
            android:key="@string/pref_dayC_Double"
            android:dependency="custom_daycheck"
            android:ems="10"
            android:inputType="numberDecimal"
            android:title="Day C Double Time"
            android:summary="Sets double time for Custom Day C."
            android:dialogTitle="Double Time Day C"
            android:dialogMessage="Enter Double Time Hours:"
            android:selectAllOnFocus="true"
            android:defaultValue="2" />
    </PreferenceCategory>
</PreferenceScreen>
